--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,5 +33,13 @@ unbind C-b
 set -g prefix C-a
 
 # 重命名终端
-set -g set-titles on
-set -g set-titles-string &#039;#(whoami)::#h::#(curl ipecho.net/plain;echo)&#039;
+# set -g set-titles on
+# set -g set-titles-string &#039;#(whoami)::#h::#(curl ipecho.net/plain;echo)&#039;
+
+# 设置移动光标模式
+setw -g mode-keys vi
+
+# copy mode
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+# bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
