--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,10 @@ set -g prefix C-a
 setw -g mode-keys vi
 
 # copy mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection                                                                                                                                          
+bind-key -T copy-mode-vi 'y' send -X copy-selection 
 # bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+set -g history-limit 10000
