--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,4 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 set -g history-limit 10000
+set -g default-terminal "tmux-256color"
